--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -146,7 +146,8 @@ dependencies {
   compile fileTree(include: [
     'bsh-2.0b4.jar',
     'identitystore.jar',
-    'odi-core-aksigorta.jar',
+    // 'odi-core-aksigorta.jar',
+    'odi-core-ck.jar',
     'ojdl.jar',
     'dms.jar'
   ], dir: 'lib/odi')
